# shell

./: .gitmodules  CMakeLists.txt  INSTALL.md  Makefile  conanfile.txt  config.json  informe.md  setup.sh
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/workflows/: QAWorkflow.yml
Testing/: CMakeLists.txt  Makefile
Testing/Temporary/: CTestCostData.txt
Testing/Testing/Temporary/: CTestCostData.txt
Testing/include/: test_commands.h  test_fusion.h  test_malloc.h  test_mocks.h  test_monitorHandle.h  test_parser.h  test_redireccion.h  test_signals.h  test_utils.h  test_worst_fit.h
Testing/src/: test_commands.c  test_fusion.c  test_main.c  test_malloc.c  test_mocks.c  test_monitorHandler.c  test_parser.c  test_redireccion.c  test_signals.c  test_utils.c  test_worst_fit.c
configs/: config2.json  config3.config  configs.json
include/: commands.h  file_finder.h  globals.h  monitorHandle.h  parser.h  pipes.h  prompt.h  signals.h  utils.h
lib/memory/: CMakeLists.txt
lib/memory/include/: memory.h
lib/memory/src/: main.c  memory.c
script/: run_coverage.sh
src/: commands.c  file_finder.c  main.c  monitorHandle.c  parser.c  pipes.c  prompt.c  signals.c  utils.c
